--- a/Analise_de_vendas.ipynb
+++ b/Analise_de_vendas.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyPTmhfG9ywLpi6bHw8gWvGZ",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/EstevaoXavier/analisando_vendas_pandas/blob/main/Analise_de_vendas.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": 19,
@@ -29,7 +41,7 @@
       "cell_type": "code",
       "source": [
         "df = pd.read_excel('Vendas.xlsx')\n",
-        "print('importando')\n",
+        "\n",
         "dfcodigo_venda = df['Código Venda']\n",
         "dfdata = df['Data']\n",
         "dfloja = df['ID Loja']\n",
@@ -41,7 +53,7 @@
       "metadata": {
         "id": "VDO6iFZHymr9"
       },
-      "execution_count": 39,
+      "execution_count": 41,
       "outputs": []
     },
     {
